--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </header>
   <main>
     <p>Welcome to my home page, the start of my website!</p>
-  
+    <p>test</p>
+    
   </main>
   <footer>
 
