Learned to edit and upload with VS, pushing main page text to test

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <main>
     <p>Welcome to my home page, the start of my website!</p>
     <p>test</p>
+    <p>With this, I have figured out how to test and upload my data!</p>
     
   </main>
   <footer>
