added main page link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Welcome to my home page, the start of my website!</p>
     <p>test</p>
     <p>With this, I have figured out how to test and upload my data!</p>
-    
+    <a href="/walkthroughs/github_web_dev.html">Click to go to cool page</a>
   </main>
   <footer>
 
