style other pages and add page navigator

--- a/walkthroughs/github_web_dev.html
+++ b/walkthroughs/github_web_dev.html
@@ -8,12 +8,19 @@
   </head>
 
   <body>
+    <!--Navigator to travel across page-->
     <nav id="top">
-      <a href="/girl.html">
+      <a href="/index.html">Home Page</a>
+      <a href="/progress/index.html">Progress</a>
+      <a href="/notes/index.html">Notes</a> 
+      <a href="/walkthroughs/index.html">Walkthroughs</a>
+      <a href="/personal_project/index.html">Self Made Projects</a>
+    </nav>
+
+    <a href="/girl.html">
         Cringe Alert Here 
         <br>(Don't Click me)
       </a>
-    </nav>
 
     <article>
       <header>
@@ -37,7 +44,6 @@
             <li> <a href="#reso">Resources Used</a> </li>
             <li> <a href="#git">Essential Github Setup</a> </li>
             <li> <a href="#op">Optional Way to Edit Website Locally</a> </li>
-            <li> <a href="#mis">Personal Mistakes to Learn From</a> </li>
           </ul><hr >
 
         <!--Resources-->
@@ -123,14 +129,6 @@
             </ol>
         </section><hr>
 
-        <!--Mistakes-->
-        <section>
-          <h2 id="mis">Personal Mistakes to Learn From</h2>
-          <p>
-            SCREW YOU I NEVER MAKE MISTAKES, I AM THE BEST!!!
-            <br>(Please just let me ride the high of accomplishing this, I beg you)
-          </p>
-        </section>
       </main>
 
       <footer>
