--- a/walkthroughs/index.html
+++ b/walkthroughs/index.html
@@ -2,10 +2,22 @@
 <html>
   <head>
     <title>My Walkthroughs</title>
-    
+    <link rel="stylesheet" href="/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>My Walkthroughs Section</h1>
+    <header>
+      <!--Navigator to travel across page-->
+      <nav id="top">
+        <a href="/index.html">Home Page</a>
+        <a href="/progress/index.html">Progress</a>
+        <a href="/notes/index.html">Notes</a> 
+        <a href="/walkthroughs/index.html">Walkthroughs</a>
+        <a href="/personal_project/index.html">Self Made Projects</a>
+      </nav>
+
+
+    </header>
     
   </body>
   
