--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html>
 <head>
   <title>Home</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
   
 <body>
   <header>
+    <!--Navigator to travel across page-->
+    <nav id="top">
+      <a href="/index.html">Home Page</a>
+      <a href="/progress/index.html">Progress</a>
+      <a href="/notes/index.html">Notes</a> 
+      <a href="/walkthroughs/index.html">Walkthroughs</a>
+      <a href="/personal_project/index.html">Self Made Projects</a>
+    </nav>
+
     <h1>Home Page</h1>
   
   </header>
