Removed redundant page

--- a/walkthroughs/index.html
+++ b/walkthroughs/index.html
@@ -16,9 +16,18 @@
         <a href="/personal_project/index.html">Self Made Projects</a>
       </nav>
 
-
+      <h1>Walkthroughs</h1>
     </header>
-    
+    <main>
+      <!--List each walkthrough page, divided by subject (web dev, scripting, etc.)-->
+      <h2>Below are my walkthroughs divided by subject:</h2>
+      
+      <h3 style="text-align: left;">Web Development</h3>
+      <ul>
+        <li><a href="/walkthroughs/github_web_dev.html">Building and Hosting my First Website through Github (With no Experience)</a></li>
+      </ul>
+
+    </main>
+
   </body>
-  
 </html>
