Remove redundant page

--- a/personal_project/index.html
+++ b/personal_project/index.html
@@ -12,13 +12,31 @@
         <a href="/index.html">Home Page</a>
         <a href="/progress/index.html">Progress</a>
         <a href="/notes/index.html">Notes</a> 
-        <a href="/walkthroughs/index.html">Walkthroughs</a>
         <a href="/personal_project/index.html">Self Made Projects</a>
       </nav>
 
-      <h1>My Collection of Self Made Scripts</h1>
-    </header>
+      <h1>My Gallery of Self Made Projects</h1>
 
+    </header>
+    <main>
+      <p>Projects (from yours truly ◕‿↼) divided up into sections of their types.
+        More likely than not all of these projects will be random, but there will usually be a 
+        purpose listed with them as to what I was trying to reinforce or practice using. Please Enjoy!
+      </p>
+      <!--So begins my list of projects-->
+      <h2>Webpages</h2>
+      <ul>
+        <li><a href="/personal_project/girl.html">Gross Website for Girlfriend</a> (Practice HTML and CSS basics)</li>
+      </ul>
+
+        <!--List each walkthrough page, divided by subject (web dev, scripting, etc.)-->
+      <h2>Below are my walkthroughs divided by subject:</h2>
+      <h3 style="text-align: left;">Web Development</h3>
+      <ul>
+        <li><a href="/personal_project/github_web_dev.html">Building and Hosting my First Website through Github (With no Experience)</a></li>
+      </ul>
+
+    </main>
     
     
   </body>
