Cleaned up personal project pages

--- a/personal_project/girl.html
+++ b/personal_project/girl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Awesome page because I'm bored ig</title>
+		<title>First Webpage Project</title>
 		<style>
 			 header, main p, footer p, ol{
 				border: solid;
@@ -22,10 +22,10 @@
 
 	<body style="text-align:center;background-color:#FF90A4">
 		<header>
-			<h3 style=""><a href="/personal_project/index.html">Get Me Out!</a></h3>
+			<h3><a href="/personal_project/index.html">Return to Projects</a></h3>
 			<p>_</p>
 			<h1>Reasons why I love my Girlfriend<br><i>(Because I'm a Simp)</i></h1>
-			<p>By the Greatness that is: <i title="Hehe I know I'm your favorite boy <3" style="border-style:groove; border-width:1px;border-color:white;background-color:#FFCFD7"> James  </i></p>
+			<p>By the Greatness that is: <i title="Hehe I know I'm your favorite" style="border-style:groove; border-width:1px;border-color:white;background-color:#FFCFD7"> I  </i></p>
 		</header>
 
 		<main>
