--- a/personal_project/index.html
+++ b/personal_project/index.html
@@ -12,28 +12,70 @@
         <a href="/index.html">Home Page</a>
         <a href="/progress/index.html">Progress</a>
         <a href="/notes/index.html">Notes</a> 
-        <a href="/personal_project/index.html">Self Made Projects</a>
+        <a href="/personal_project/index.html">Personal Projects</a>
       </nav>
 
-      <h1>My Gallery of Self Made Projects</h1>
+      <h1>My Project Gallery</h1>
 
     </header>
     <main>
       <p>Projects (from yours truly ◕‿↼) divided up into sections of their types.
         More likely than not all of these projects will be random, but there will usually be a 
-        purpose listed with them as to what I was trying to reinforce or practice using. Please Enjoy!
-      </p>
-      <!--So begins my list of projects-->
+        purpose listed within them as to what I was trying to reinforce or practice using along with
+        what number creation it is (As in 1 is my first project made, 2 is my second ever project, etc.). Please Enjoy!
+      </p><br>
+
+      <!--Projects listed Below
+      Formatted with the 
+      -order I created it in (1-first project, 2-second, etc.)
+      -purpose/short description 
+      when clicked on with details/summary tag usage to show details-->
+      
+      <hr>
       <h2>Webpages</h2>
+      <hr>
+
       <ul>
-        <li><a href="/personal_project/girl.html">Gross Website for Girlfriend</a> (Practice HTML and CSS basics)</li>
+        <li>
+          <details>
+            <summary><a href="/personal_project/girl.html">Girl Site</a></summary>
+            <p>
+              <b>Creation #1</b>
+              <br><b>Purpose:</b> My first project made up for fun, focusing on practicing
+              basic webpage format, getting used to adding styles like colors, utilizing lists, hyperlinks, lists, and borders
+              <br>Sidenote: <i>I promise I don't normally use the language this page contains and am self aware enough to know it's cringey</i>
+            </p>
+          </details>
+        </li>
+
+        <li>
+          <details>
+            <summary><a href="/personal_project/knight.html">W40k Chaos Knights</a></summary>
+            <p><b>Creation #2</b><br>
+              <b>Purpose:</b> Reinforce usage of padding vs margin styling, adding custom fonts, and start using detail/summary tags
+            </p>
+          </details>
+        </li>
+
       </ul>
 
         <!--List each walkthrough page, divided by subject (web dev, scripting, etc.)-->
-      <h2>Below are my walkthroughs divided by subject:</h2>
+
+      <hr>
+      <h2>Walkthroughs:</h2>
+      <hr>
+
       <h3 style="text-align: left;">Web Development</h3>
       <ul>
-        <li><a href="/personal_project/github_web_dev.html">Building and Hosting my First Website through Github (With no Experience)</a></li>
+        <li>
+          <details>
+            <summary><a href="/personal_project/github_web_dev.html">Building and Hosting Websites through Github</a></summary>
+            <p>I created this guide after discovering how to create and then host this very website through github, 
+              my main goal being to reinforce and ensure I understand what I did by explaining the process in a way 
+              somebody else could follow themselves.
+            </p>
+          </details>
+        </li>
       </ul>
 
     </main>
