--- a/notes/index.html
+++ b/notes/index.html
@@ -12,7 +12,7 @@
         <a href="/index.html">Home Page</a>
         <a href="/progress/index.html">Progress</a>
         <a href="/notes/index.html">Notes</a> 
-        <a href="/personal_project/index.html">Self Made Projects</a>
+        <a href="/personal_project/index.html">Personal Projects</a>
       </nav>
       
       <h1>My Notes Section</h1>
