Added main pages notes and formatted Goals page

--- a/progress/index.html
+++ b/progress/index.html
@@ -18,7 +18,63 @@
       <h1>My progress made and future goals</h1>
     </header>
 
-    
+    <main>
+      <!-- 1st, Current Goals Listed Below-->
+      <h2>Currrent Goals</h2><hr>
+      <p>Below are all of my goals I am currently looking to puruse along with their meaning! 
+        Each goal will be marked as either in progress or not started.
+      </p>
+
+      <ul>
+        <li><!--Format Site, Goal 1-->
+          <details> 
+            <summary>(Work In Progress) Format my Site</summary>
+            <p>
+              <b>Dates: Began 5-23-2025</b><br>
+              <b>Details:</b> 
+              I will be working to accomplish a few different objectives; 
+              create my format for 4 web pages (home, progress, notes, and projects), 
+              a css style to use across my website, 
+              and then finally populate said pages with any relevant information 
+              (adding my projects, goals, notes, and etc. to their respective pages page)
+            </p>
+          </details>
+        </li>
+      </ul>
+
+      <!-- 2nd, Completed Goals Listed Below-->
+      <br><h2>Completed Goals</h2><hr>
+      <p>Here lies my completed goals. Stated under them will be details such as their 
+        start and end dates, major milestones, and any thoughts I had before, during, or after working on them!</p>
+      <ul>
+        <li><!--Host website and run it, 1st finished goal-->
+          <details> 
+            <summary>Get Website Hosted and Running</summary>
+            <p><b>Dates:</b> Accomplished on 5-14-2025<br>
+              <b>Details: </b>
+              This was the first goal I had, to build a quick index.html script that I could host through github,
+              so that I could build up to what my website is now today. To accomplish this, there was a decent amount of research on
+              html basics, how github worked, how hosting the site worked, and finding better ways to edit/check my github code, 
+              all of which led me to accomplish what I set out to do.<br>
+              The feeling of setting out to get a goal you know nothing about accomplished and actually do it will always feel amazing to me 
+              and is honestly serving as motivation for the rest of my future projects. If I could do this, I can figure out the next goal as well.
+            </p>
+          </details>
+        </li>
+      </ul>
+
+      <!-- 3rd, Abandoned/Failed Goals Listed Below-->
+      <br><h2>Goals to Revisit (Failed or not Prioritized)</h2><hr>
+      <p>In this category, all of my failed or no longer pursued projects are listed.
+        I will include details on why they ended up in this state, whether it be me being 
+        too ambitious, no longer a priority, or some other reason, along with any thoughts 
+        I took away after putting this goal aside.
+      </p>
+      <ul>
+        - N/A
+      </ul>
+
+    </main>
     
   </body>
   
