Set up Notes Page, added note formats,

--- a/notes/index.html
+++ b/notes/index.html
@@ -18,8 +18,19 @@
       <h1>My Notes Section</h1>
     </header>
     <main>
-
+      <!--Note Category (h2) and Note Pages (within list)-->
+      <section>
+      <h2>TryHackMe Path Notes</h2>
+      <ul>
+        <li><a href="tryHackMe/preSecurity.html">Pre-Security</a></li>
+      </ul></section>
+      <br>
       
+      <h2>Comptia Notes</h2>
+      <ul>
+        <li><a href="Comptia/cNetwork+.html">Network+</a></li>
+      </ul>
+      <br>
     </main>
     
   </body>
