--- a/personal_project/index.html
+++ b/personal_project/index.html
@@ -35,7 +35,8 @@
       <!--List Webpage Projects Below-->
       <hr><h2>Webpages</h2><hr>
       <ul>
-        <li><!--Girl Page Project-->
+        <!--
+        <li> Girl Page Project
           <details>
             <summary><a href="/personal_project/girl.html">Girl Site</a></summary>
             <p>
@@ -46,11 +47,11 @@
             </p>
           </details>
         </li>
-
+        -->
         <li><!--W40k Chaos Knight Project-->
           <details>
             <summary><a href="/personal_project/knight.html">W40k Chaos Knights</a></summary>
-            <p><b>Creation #2</b><br>
+            <p class="answer"><b>Creation #2</b><br>
               <b>Purpose:</b> Reinforce usage of padding vs margin styling, adding custom fonts, and start using detail/summary tags
             </p>
           </details>
@@ -63,7 +64,7 @@
         <li><!--Webpage Hosting W/Github Walkthrough-->
           <details>
             <summary><a href="/personal_project/github_web_dev.html">Building and Hosting Websites through Github</a></summary>
-            <p>I created this guide after discovering how to create and then host this very website through github, 
+            <p class="answer">I created this guide after discovering how to create and then host this very website through github, 
               my main goal being to reinforce and ensure I understand what I did by explaining the process in a way 
               somebody else could follow themselves.
             </p>
