--- a/progress/index.html
+++ b/progress/index.html
@@ -26,20 +26,23 @@
       </p>
 
       <ul>
-        <li><!--Format Site, Goal 1-->
-          <details> 
-            <summary>(Work In Progress) Format my Site</summary>
-            <p>
-              <b>Dates: Began 5-23-2025</b><br>
-              <b>Details:</b> 
-              I will be working to accomplish a few different objectives; 
-              create my format for 4 web pages (home, progress, notes, and projects), 
-              a css style to use across my website, 
-              and then finally populate said pages with any relevant information 
-              (adding my projects, goals, notes, and etc. to their respective pages page)
-            </p>
-          </details>
-        </li>
+        <li><details>
+          <summary>Complete TryHackMe Courses</summary>
+          <p class="answer">
+            <b>Dates: Started 6-10-2025</b> <br>
+            <b>Details: </b>
+            My next step after forming this website is to begin studying TryHackMe courses.
+            The idea behind this is to introduce myself to computer and network basics, 
+            familiarize myself with server systems, Operating Systems like linux and window servers,
+            and to get learn about different IT roles related to Cybersecurity.
+            Notes will be taken on this site for learning and reference purposes, along 
+            with courses I complete or am progressing.
+            <ul>
+              <li>(Currently 9%) Pre-Security Path</li>
+            </ul>
+
+          </p>
+        </details></li>
       </ul>
 
       <!-- 2nd, Completed Goals Listed Below-->
@@ -50,7 +53,7 @@
         <li><!--Host website and run it, 1st finished goal-->
           <details> 
             <summary>Get Website Hosted and Running</summary>
-            <p><b>Dates:</b> Accomplished on 5-14-2025<br>
+            <p class="answer"><b>Dates:</b> Accomplished on 5-14-2025<br>
               <b>Details: </b>
               This was the first goal I had, to build a quick index.html script that I could host through github,
               so that I could build up to what my website is now today. To accomplish this, there was a decent amount of research on
@@ -58,6 +61,27 @@
               all of which led me to accomplish what I set out to do.<br>
               The feeling of setting out to get a goal you know nothing about accomplished and actually do it will always feel amazing to me 
               and is honestly serving as motivation for the rest of my future projects. If I could do this, I can figure out the next goal as well.
+            </p>
+          </details>
+        </li>
+        <li><!--Format Site, Goal 1-->
+          <details> 
+            <summary>Format my Site</summary>
+            <p class="answer">
+              <b>Dates:</b> Began 5-23-2025, Finished 6-10-2025<br>
+              <b>Details:</b> 
+              I have worked to accomplish a few different objectives; 
+              create my format for 4 web pages (home, progress, notes, and projects), 
+              a css style to use across my website, 
+              and then finally populate said pages with any relevant information 
+              (adding my projects, goals, notes, and etc. to their respective pages page)
+              <br>It took a while due to gaps in time of me working on this site, 
+              but I still managed to get everything I set out to do done, starting with
+              the completion of my project page, onto the home, then progress, and finally finishing with 
+              the note page. The note page was the most advanced for me, as I wanted to create a 
+              note format that would be practical. Though there are plenty more additions possible, I will
+              wait to touch up my work until the current format takes too much space
+              or unless better accessibility is desired. 
             </p>
           </details>
         </li>
